--- a/CSS-Box-Model/box-styles.css
+++ b/CSS-Box-Model/box-styles.css
@@ -8,12 +8,22 @@ h1,h2,h3,h4,h5,h6,p {
 }
 
 p {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 20px 0 20px 10px;
+
+  margin-top: 25px;
+  margin-bottom: 50px;
 }
 em, strong {
   background-color: #B2D6FF;    /* Light blue */
    display: inline; /*this is default for em and strong*/
+}
+
+div {
+  color: #FFF;
+  background-color: #5995DA;
+  font-weight: bold;
+  padding: 20px;
+  text-align: center;
+  border: 2px solid #5D6063;
+  border-radius: 5px;
 }
